vertical alignment of text fix

--- a/layouts/hcc/styles.css
+++ b/layouts/hcc/styles.css
@@ -78,7 +78,7 @@ html, body {
 .bigheading {
 	width:100%;
 	min-height:100pt;
-	line-height:100pt;
+	/*line-height:100pt;*/
 	background-color:#020249;
 	font-family: 'Muli', sans-serif;
 	color:#FFFFFF;
@@ -86,13 +86,24 @@ html, body {
 	/*background-image:url("./static/bannergradient.png");*/
 	background-position:top;
 	background-repeat:repeat-x;
+
+	display:table;
+}
+
+.verticalaligner {
+	display:table-cell;
+	height:100%;
+	vertical-align:middle;
 }
 
 .smallheading {
 	font-family: 'Muli', sans-serif;
 	color:#000000;
 	font-size:2em;
-	line-height:100pt;
+	width:100%;
+	padding:25pt 0;
+
+	display:table;
 }
 
 .smallerheading {
@@ -139,4 +150,10 @@ html, body {
 
 #floatingnav a:hover {
 	color:#6EAE33;
+}
+
+@media only screen and (max-width: 915px) {
+	.bigheading {
+		line-height:inherit;
+	}
 }
